--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,8 @@
 @import "src/styles/About/about";
 @import "src/styles/Course/course";
 @import "src/styles/Developments/developments";
+@import "src/styles/Certificate/certificate";
+@import "Sliders/sliders";
 
 *{
   margin: 0;
