--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,7 +8,9 @@
 @import "src/styles/School/school";
 @import "src/styles/About/about";
 @import "src/styles/Course/course";
-@import "src/styles/Developments/developments";
+@import "src/styles/Team/team";
+@import "src/styles/Master/master";
+@import "src/styles/Dollar/dollar";
 
 *{
   margin: 0;
