--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,9 @@
 @import "src/styles/Master/master";
 @import "src/styles/Dollar/dollar";
 @import "src/styles/Certificate/certificate";
+@import "src/styles/About/mediaAbout";
+@import "src/styles/Certificate/mediaCertificate";
+@import "src/styles/Sliders/mediaSliders";
 @import "Sliders/sliders";
 
 *{
@@ -32,4 +35,10 @@ a{
 body,html{
   scroll-behavior: smooth;
   background: #0A1128;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    width: 90%;
+  }
 }
