--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,10 +12,16 @@
 @import "src/styles/Master/master";
 @import "src/styles/Dollar/dollar";
 @import "src/styles/Certificate/certificate";
+
+@import "src/styles/About/mediaAbout";
+@import "src/styles/Certificate/mediaCertificate";
+@import "src/styles/Sliders/mediaSliders";
+
 @import "src/styles/Master/mediaMaster";
 @import "src/styles/Dollar/mediaDollar";
 @import "src/styles/Team/mediaTeam";
 @import "src/styles/School/mediaSchool";
+
 @import "Sliders/sliders";
 
 *{
@@ -36,4 +42,10 @@ a{
 body,html{
   scroll-behavior: smooth;
   background: #0A1128;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    width: 90%;
+  }
 }
