--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,7 +12,14 @@
 @import "src/styles/Master/master";
 @import "src/styles/Dollar/dollar";
 @import "src/styles/Certificate/certificate";
+@import "src/styles/Course/mediaCourse";
+@import "src/styles/Hero/mediaHero";
+@import "src/styles/Articles/mediaArticl";
+@import "src/styles/Subscribe/mediaSubscribe";
+@import "src/styles/Questions/mediaQuestion";
+@import "src/styles/Submit/mediaSumbit";
 @import "Sliders/sliders";
+
 
 *{
   margin: 0;
