--- a/src/styles/Hero/hero.scss
+++ b/src/styles/Hero/hero.scss
@@ -1,13 +1,13 @@
 #hero {
 background: url("../../asstets/img/fr20.png") no-repeat center/cover;
-  min-height: 100vh;
-  padding-bottom: 150px;
+  min-height: 170vh;
+  padding-top: 100px;
   .hero--general {
     display: flex;
     justify-content: space-between;
     align-items: center;
     &__text {
-      margin-top: 15%;
+      margin-top: 10%;
 
       h1 {
         font-weight: 700;
@@ -27,8 +27,8 @@ background: url("../../asstets/img/fr20.png") no-repeat center/cover;
       }
     }
     &__laptop{
-      margin-top: 120px;
-
+      margin-top: 70px;
+      margin-left: -50px;
     }
   }
 
