--- a/src/styles/Hero/hero.scss
+++ b/src/styles/Hero/hero.scss
@@ -1,7 +1,13 @@
 #hero {
+
+background: url("../../asstets/img/fr20.png") no-repeat center/cover;
+  min-height: 170vh;
+  padding-top: 100px;
+
   background: url("../../asstets/img/fr20.png") no-repeat center/cover;
   min-height: 100vh;
   padding-bottom: 150px;
+
 
   .hero--general {
     display: flex;
@@ -9,7 +15,7 @@
     align-items: center;
 
     &__text {
-      margin-top: 15%;
+      margin-top: 10%;
 
       h1 {
         font-weight: 700;
@@ -29,8 +35,14 @@
       }
     }
 
+    &__laptop{
+      margin-top: 70px;
+      margin-left: -50px;
+
+
     &__laptop {
       margin-top: 120px;
+
 
     }
   }
