--- a/src/styles/Articles/articles.scss
+++ b/src/styles/Articles/articles.scss
@@ -1,10 +1,22 @@
-#articles{
-  .articles--general{
+#articles {
+  .articles--h2 {
+    padding-top: 150px;
+    padding-right: 85%;
+    font-weight: 400;
+    font-size: 16px;
+    color: #A5A5A5;
+    cursor: pointer;
+    span{
+      color: #FFFFFF;
+    }
+  }
+  .articles--general {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    &__title{
+
+    &__title {
       padding-top: 80px;
       padding-bottom: 80px;
       font-weight: 700;
@@ -12,31 +24,34 @@
       line-height: 35px;
       color: #FFFFFF;
     }
-    &__blocks{
+
+    &__blocks {
       display: flex;
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
 
-      &--block{
+      &--block {
         margin: 40px 0 0 0;
         width: 350px;
         height: 355px;
         background: #FFFFFF;
         border-radius: 19px 19px 19px 19px;
-        img{
+
+        img {
           width: 350px;
           height: 187px;
         }
 
 
-        h4{
+        h4 {
           padding: 10px 15px;
           font-weight: 500;
           font-size: 14px;
           color: #898989;
         }
-        p{
+
+        p {
           padding: 0 15px;
           font-weight: 600;
           font-size: 18px;
@@ -44,7 +59,8 @@
           color: #000000;
 
         }
-        &__desc{
+
+        &__desc {
           padding: 25px 15px;
           display: flex;
           justify-content: space-between;
@@ -52,19 +68,21 @@
           height: 18px;
           width: 351px;
 
-          &--icon{
+          &--icon {
             display: flex;
             justify-content: space-around;
             align-items: center;
             color: #044176;
-            h1{
+
+            h1 {
               font-weight: 500;
               font-size: 15px;
               color: #044176;
               padding-left: 5px;
             }
           }
-          p{
+
+          p {
             font-weight: 500;
             font-size: 15px;
             color: #044176;
@@ -72,7 +90,8 @@
         }
       }
     }
-    &__btn{
+
+    &__btn {
       margin-top: 50px;
       margin-bottom: 50px;
       font-weight: 500;
@@ -86,7 +105,8 @@
       outline: none;
       transition: .4s;
       cursor: pointer;
-      &:hover{
+
+      &:hover {
         transform: scale(1.1);
       }
     }
