--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,10 @@
 @import "src/styles/Master/master";
 @import "src/styles/Dollar/dollar";
 @import "src/styles/Certificate/certificate";
+@import "src/styles/Package/package";
+@import "src/styles/Header/mediaHeader";
+@import "src/styles/Footer/mediaFooter";
+@import "src/styles/Checking/checking";
 
 @import "src/styles/Course/mediaCourse";
 @import "src/styles/Hero/mediaHero";
@@ -38,6 +42,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 .container{
@@ -50,7 +55,6 @@ a{
 }
 
 body,html{
-  scroll-behavior: smooth;
   background: #0A1128;
 }
 
