--- a/src/styles/Team/team.scss
+++ b/src/styles/Team/team.scss
@@ -56,6 +56,7 @@
           text-align: center;
           color: #FFFFFF;
           background: #043C71;
+          cursor: pointer;
           backdrop-filter: blur(7.5px);
           border-radius: 5px;
           transition: .4s;
