--- a/src/styles/Articles/articles.scss
+++ b/src/styles/Articles/articles.scss
@@ -1,117 +1,120 @@
 #articles {
   .articles--h2 {
-    padding-top: 150px;
+    //padding-top: 150px;
     padding-right: 85%;
     font-weight: 400;
     font-size: 16px;
     color: #A5A5A5;
     cursor: pointer;
-    span{
+
+    span {
       color: #FFFFFF;
     }
   }
-  .articles--general {
-  .articles--general {
-    margin-top: -195px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 
-    &__title {
-      padding-top: 80px;
-      padding-bottom: 80px;
-      font-weight: 700;
-      font-size: 36px;
-      line-height: 35px;
-      color: #FFFFFF;
-    }
-
-    &__blocks {
+  .articles--general {
+    .articles--general {
+      margin-top: -195px;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
-      flex-wrap: wrap;
-      background: rgba(10, 17, 40, 0.4);
+      flex-direction: column;
+
+      &__title {
+        padding-top: 80px;
+        padding-bottom: 80px;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 35px;
+        color: #FFFFFF;
+      }
+
+      &__blocks {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        background: rgba(10, 17, 40, 0.4);
 
 
-      &--block {
-        margin: 40px 0 0 0;
-        width: 350px;
-        height: 355px;
-        background: #FFFFFF;
-        border-radius: 19px 19px 19px 19px;
-
-        img {
+        &--block {
+          margin: 40px 0 0 0;
           width: 350px;
-          height: 187px;
-        }
+          height: 355px;
+          background: #FFFFFF;
+          border-radius: 19px 19px 19px 19px;
+
+          img {
+            width: 350px;
+            height: 187px;
+          }
 
 
-        h4 {
-          padding: 10px 15px;
-          font-weight: 500;
-          font-size: 14px;
-          color: #898989;
-        }
-
-        p {
-          padding: 0 15px;
-          font-weight: 600;
-          font-size: 18px;
-          line-height: 20px;
-          color: #000000;
-
-        }
-
-        &__desc {
-          padding: 25px 15px;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          height: 18px;
-          width: 351px;
-
-          &--icon {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            color: #044176;
-
-            h1 {
-              font-weight: 500;
-              font-size: 15px;
-              color: #044176;
-              padding-left: 5px;
-            }
+          h4 {
+            padding: 10px 15px;
+            font-weight: 500;
+            font-size: 14px;
+            color: #898989;
           }
 
           p {
-            font-weight: 500;
-            font-size: 15px;
-            color: #044176;
+            padding: 0 15px;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 20px;
+            color: #000000;
+
+          }
+
+          &__desc {
+            padding: 25px 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 18px;
+            width: 351px;
+
+            &--icon {
+              display: flex;
+              justify-content: space-around;
+              align-items: center;
+              color: #044176;
+
+              h1 {
+                font-weight: 500;
+                font-size: 15px;
+                color: #044176;
+                padding-left: 5px;
+              }
+            }
+
+            p {
+              font-weight: 500;
+              font-size: 15px;
+              color: #044176;
+            }
           }
         }
       }
-    }
 
-    &__btn {
-      margin-top: 50px;
-      margin-bottom: 50px;
-      font-weight: 500;
-      font-size: 18px;
-      color: #FFFFFF;
-      width: 246px;
-      height: 60px;
-      background: #034078;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-      transition: .4s;
-      cursor: pointer;
+      &__btn {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        font-weight: 500;
+        font-size: 18px;
+        color: #FFFFFF;
+        width: 246px;
+        height: 60px;
+        background: #034078;
+        border-radius: 5px;
+        border: none;
+        outline: none;
+        transition: .4s;
+        cursor: pointer;
 
-      &:hover {
-        transform: scale(1.1);
+        &:hover {
+          transform: scale(1.1);
+        }
       }
     }
   }
