--- a/src/styles/Hero/hero.scss
+++ b/src/styles/Hero/hero.scss
@@ -1,12 +1,9 @@
 #hero {
 
-background: url("../../asstets/img/fr20.png") no-repeat center/cover;
-  min-height: 170vh;
-  padding-top: 100px;
-
   background: url("../../asstets/img/fr20.png") no-repeat center/cover;
-  min-height: 100vh;
-  padding-bottom: 150px;
+  min-height: 170vh;
+  padding-top: 20px;
+  //padding-bottom: 100px;
 
 
   .hero--general {
@@ -35,18 +32,18 @@ background: url("../../asstets/img/fr20.png") no-repeat center/cover;
       }
     }
 
-    &__laptop{
+    &__laptop {
       margin-top: 70px;
       margin-left: -50px;
 
 
-    &__laptop {
-      margin-top: 120px;
+      &__laptop {
+        margin-top: 120px;
 
 
+      }
     }
   }
 }
-
 
 
