--- a/src/styles/Hero/hero.scss
+++ b/src/styles/Hero/hero.scss
@@ -2,9 +2,8 @@
 
   background: url("../../asstets/img/fr20.png") no-repeat center/cover;
   min-height: 170vh;
-  padding-top: 20px;
-  //padding-bottom: 100px;
-
+  padding-top: 90px;
+  margin-bottom: -260px;
 
   .hero--general {
     display: flex;
@@ -12,7 +11,7 @@
     align-items: center;
 
     &__text {
-      margin-top: 10%;
+      padding-bottom: 70px;
 
       h1 {
         font-weight: 700;
