--- a/src/styles/Articles/articles.scss
+++ b/src/styles/Articles/articles.scss
@@ -1,6 +1,6 @@
 #articles {
   .articles--h2 {
-    //padding-top: 150px;
+    padding-top: 150px;
     padding-right: 85%;
     font-weight: 400;
     font-size: 16px;
@@ -14,11 +14,12 @@
 
   .articles--general {
     .articles--general {
-      margin-top: -195px;
+      margin-top: 255px;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+
 
       &__title {
         padding-top: 80px;
@@ -26,16 +27,18 @@
         font-weight: 700;
         font-size: 36px;
         line-height: 35px;
+        margin-left: 5%;
         color: #FFFFFF;
       }
 
       &__blocks {
+        margin-top: -38px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
-        background: rgba(10, 17, 40, 0.4);
-
+        padding: 60px;
+        margin-bottom: 100px;
 
         &--block {
           margin: 40px 0 0 0;
@@ -48,7 +51,6 @@
             width: 350px;
             height: 187px;
           }
-
 
           h4 {
             padding: 10px 15px;
@@ -98,8 +100,6 @@
       }
 
       &__btn {
-        margin-top: 50px;
-        margin-bottom: 50px;
         font-weight: 500;
         font-size: 18px;
         color: #FFFFFF;
@@ -111,6 +111,7 @@
         outline: none;
         transition: .4s;
         cursor: pointer;
+        margin-bottom: 110px;
 
         &:hover {
           transform: scale(1.1);
