--- a/src/styles/Course/course.scss
+++ b/src/styles/Course/course.scss
@@ -2,6 +2,7 @@
   padding: 150px 0;
 
   .course--general {
+    margin-left: 7%;
     &__title {
       h1 {
         font-weight: 400;
@@ -10,13 +11,13 @@
         cursor: pointer;
       }
     }
-
     h2 {
       font-weight: 700;
       font-size: 36px;
       color: #FFFFFF;
       text-align: center;
       padding: 50px 0;
+      margin-left: -40px;
     }
 
     &__group {
@@ -41,6 +42,7 @@
           font-weight: 700;
           font-size: 24px;
           color: #000000;
+
         }
 
         p {
