--- a/src/styles/Package/package.scss
+++ b/src/styles/Package/package.scss
@@ -37,6 +37,7 @@
       flex-direction: column;
       justify-content: space-around;
       align-items: center;
+      cursor: pointer;
       margin-left: 50px;
 
       &--title {
@@ -91,10 +92,12 @@
         border-radius: 3.27273px;
         border: none;
         outline: none;
+        cursor: pointer;
         transition: .4s;
 
         &:hover {
           transform: scale(1.1);
+          cursor: pointer;
         }
       }
     }
@@ -105,6 +108,7 @@
       background: #FFFFFF;
       border-radius: 10px;
       display: flex;
+      cursor: pointer;
       flex-direction: column;
       justify-content: space-around;
       align-items: center;
@@ -162,6 +166,7 @@
 
         &:hover {
           transform: scale(1.1);
+          cursor: pointer;
         }
       }
     }
