--- a/src/styles/Questions/questions.scss
+++ b/src/styles/Questions/questions.scss
@@ -6,6 +6,7 @@
   .questions--general {
     display: flex;
     justify-content: space-between;
+    margin-top: 60px;
 
     &__title {
       h1 {
