--- a/src/styles/Team/team.scss
+++ b/src/styles/Team/team.scss
@@ -11,12 +11,25 @@
         margin: 20px 0;
         font-size: 30px;
         color: white;
+        z-index: 9;
       }
+    }
+    &__circle{
+      position: absolute;
+      width: 749px;
+      height: 749px;
+      left: 737px;
+      top: 739px;
+      background: radial-gradient(49.91% 49.91% at 41.3% 40.46%, #034078 0%, #019EFF 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+      filter: blur(561.75px);
+      z-index: 1;
+
     }
     &__blocks {
       display: flex;
       align-items: center;
       justify-content: space-between;
+
       &--title {
         margin: 25px 0;
         padding: 20px;
@@ -24,6 +37,7 @@
         height: 283.5px;
         background: #FFFFFF;
         border-radius: 15px;
+        z-index: 9;
 
         &__enter {
           display: flex;
@@ -33,6 +47,7 @@
             font-size: 16px;
             margin: 0 10px;
             color: #000000;
+            z-index: 9999;
           }
         }
         p {
@@ -47,6 +62,7 @@
     &__btn {
       display: flex;
       justify-content: center;
+      z-index: 99;
         button {
           margin: 20px 0;
           padding: 10px 30px;
@@ -60,7 +76,7 @@
           backdrop-filter: blur(7.5px);
           border-radius: 5px;
           transition: .4s;
-
+          z-index: 999;
           &:hover{
             transform: scale(1.1);
           }
@@ -75,34 +91,7 @@
 @media (max-width: 768px) {
   #team .team--general__blocks{
     display: flex;
-
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
