--- a/src/styles/Header/header.scss
+++ b/src/styles/Header/header.scss
@@ -4,8 +4,6 @@
   position: fixed;
   width: 100%;
   z-index: 100;
-
-
   .header--general{
     padding: 25px 0;
     display: flex;
@@ -45,11 +43,14 @@
         outline: none;
         cursor: pointer;
         transition: .4s;
-          &:hover{
-            transform: scale(1.1);
-            color: aqua;
+        &:hover{
+          transform: scale(1.1);
+          color: aqua;
         }
       }
+    }
+    &__burger{
+      display: none;
     }
   }
 }
