--- a/src/styles/Team/mediaTeam.scss
+++ b/src/styles/Team/mediaTeam.scss
@@ -1,40 +1,20 @@
 
 @media (max-width: 1201px) {
-  #team {
-    .container {
-      width: 90%;
-
-      .team--general {
-        &__item {
-          h2 {
-
-          }
-        }
-
-        &__blocks {
-          &--title {
-            width: 340px;
-            height: 283.5px;
-
-            &__enter {
-              h5 {
-
-              }
-
-              p {
-
-              }
-            }
-          }
-        }
-
-        &__btn {
-          button {
-
-          }
-        }
-      }
-    }
+  #team .team--general__circle {
+    position: absolute;
+    width: 40%;
+    height: 541px;
+    left: 737px;
+    top: 739px;
+    background: radial-gradient(49.91% 49.91% at 41.3% 40.46%, #034078 0%, #019EFF 100%);
+    filter: blur(561.75px);
+    z-index: 1;
+  }
+  #team .team--general__blocks {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: -33px;
   }
 }
 
@@ -174,9 +154,12 @@
       }
     }
   }
+  #team .team--general__circle {
+    left: 417px;
+  }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 580px) {
   #team {
     .container {
       width: 90%;
@@ -265,6 +248,9 @@
         }
       }
     }
+  }
+  #team .team--general__circle {
+    left: 325px;
   }
 }
 
