--- a/src/styles/Master/master.scss
+++ b/src/styles/Master/master.scss
@@ -60,6 +60,7 @@
           padding: 15px 40px;
           border: none;
           transition: .4s;
+          cursor: pointer;
 
           &:hover {
             transform: scale(1.1);
