--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,6 +16,7 @@
 @import "src/styles/Header/mediaHeader";
 @import "src/styles/Footer/mediaFooter";
 @import "src/styles/Checking/checking";
+@import "src/styles/Profile/profile";
 
 @import "src/styles/Course/mediaCourse";
 @import "src/styles/Hero/mediaHero";
