--- a/src/styles/Master/master.scss
+++ b/src/styles/Master/master.scss
@@ -62,6 +62,7 @@
           padding: 15px 40px;
           border: none;
           transition: .4s;
+          cursor: pointer;
           margin-bottom: 118px;
 
           &:hover {
