--- a/src/styles/Articles/articles.scss
+++ b/src/styles/Articles/articles.scss
@@ -14,12 +14,11 @@
 
   .articles--general {
     .articles--general {
-      margin-top: 255px;
+      margin-top: -195px;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-
 
       &__title {
         padding-top: 80px;
@@ -27,18 +26,16 @@
         font-weight: 700;
         font-size: 36px;
         line-height: 35px;
-        margin-left: 5%;
         color: #FFFFFF;
       }
 
       &__blocks {
-        margin-top: -38px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-        padding: 60px;
-        margin-bottom: 100px;
+        background: rgba(10, 17, 40, 0.4);
+
 
         &--block {
           margin: 40px 0 0 0;
@@ -100,6 +97,8 @@
       }
 
       &__btn {
+        margin-top: 50px;
+        margin-bottom: 50px;
         font-weight: 500;
         font-size: 18px;
         color: #FFFFFF;
@@ -111,7 +110,6 @@
         outline: none;
         transition: .4s;
         cursor: pointer;
-        margin-bottom: 110px;
 
         &:hover {
           transform: scale(1.1);
