--- a/src/styles/Hero/hero.scss
+++ b/src/styles/Hero/hero.scss
@@ -11,7 +11,7 @@
     align-items: center;
 
     &__text {
-      padding-bottom: 70px;
+      margin-top: 10%;
 
       h1 {
         font-weight: 700;
@@ -44,5 +44,6 @@
     }
   }
 }
+
 
 
