--- a/src/styles/Sliders/mediaSliders.scss
+++ b/src/styles/Sliders/mediaSliders.scss
@@ -82,7 +82,7 @@
     width: 190%;
     .slick-list{
       p{
-        width: 285px
+        width: 284px
       }
       img{
         margin-left: 30%;
@@ -98,7 +98,7 @@
     width: 240%;
     .slick-list{
       p{
-        width: 285px
+        width: 284px
       }
       img{
         margin-left: 30%;
@@ -111,7 +111,7 @@
     width: 240%;
     .slick-list{
       p{
-        width: 295px
+        width: 294px
       }
       img{
         margin-left: 30%;
@@ -123,11 +123,18 @@
 @media (max-width: 320px ) {
   #slider .slider--general {
 
+    width: 180%;
+    .slick-list{
+      p{
+        width: 194px
+=======
+
 
     width: 180%;
     .slick-list{
       p{
         width: 195px
+
       }
       img{
         margin-left: 30%;
