--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,12 @@
 @import "src/styles/Master/master";
 @import "src/styles/Dollar/dollar";
 @import "src/styles/Certificate/certificate";
+@import "After/after";
+@import "src/styles/Brilliant/brilliant";
+@import "src/styles/Front/front";
+@import "src/styles/Process/process";
+@import "src/styles/Program/program";
+@import "src/styles/So/so";
 @import "src/styles/Package/package";
 @import "src/styles/Header/mediaHeader";
 @import "src/styles/Footer/mediaFooter";
