--- a/src/styles/Sliders/mediaSliders.scss
+++ b/src/styles/Sliders/mediaSliders.scss
@@ -24,9 +24,6 @@
       }
     }
   }
-
-
-
 }
 
 
@@ -124,20 +121,24 @@
   #slider .slider--general {
 
     width: 180%;
-    .slick-list{
-      p{
+
+    .slick-list {
+      p {
         width: 194px
-=======
-
-
-    width: 180%;
-    .slick-list{
-      p{
-        width: 195px
 
       }
-      img{
-        margin-left: 30%;
+
+      width: 180%;
+
+      .slick-list {
+        p {
+          width: 195px
+
+        }
+
+        img {
+          margin-left: 30%;
+        }
       }
     }
   }
