--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,6 @@
 @import "src/styles/Footer/mediaFooter";
 @import "src/styles/Checking/checking";
 @import "src/styles/Profile/profile";
-
 @import "src/styles/Course/mediaCourse";
 @import "src/styles/Hero/mediaHero";
 @import "src/styles/Articles/mediaArticl";
@@ -31,6 +30,9 @@
 @import "src/styles/Dollar/mediaDollar";
 @import "src/styles/Team/mediaTeam";
 @import "src/styles/School/mediaSchool";
+@import "src/styles/Control/control";
+
+
 
 
 @import "Sliders/sliders";
