--- a/src/styles/School/mediaSchool.scss
+++ b/src/styles/School/mediaSchool.scss
@@ -96,13 +96,6 @@
       }
     }
   }
-  #school .school--general__item {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding-bottom: 5%;
-    margin-top: 90px;
-  }
 }
 
 @media (max-width: 376px) {
@@ -201,7 +194,7 @@
   }
 }
 
-@media (max-width: 580px) {
+@media (max-width: 576px) {
   .container {
     width: 90%;
   }
@@ -231,14 +224,37 @@
       }
     }
   }
-  #school .school--general__item {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding-bottom: 5%;
-    margin-top: 90px;
-  }
 }
 
+@media (max-width: 576px) {
+  .container {
+    width: 90%;
+  }
+  #school {
+    .school--general {
+      &__item {
 
+      }
+
+      &__title {
+        display: flex;
+        flex-direction: column;
+        &--block {
+          h1 {
+            font-size: 24px;
+            text-align: center;
+            margin-top: 35px;
+          }
+          p {
+            font-size: 15px;
+            text-align: center;
+          }
+        }
+        img {
+          width: 270px  ;
+        }
+      }
+    }
+  }
+}
 
