--- a/src/styles/Sliders/mediaSliders.scss
+++ b/src/styles/Sliders/mediaSliders.scss
@@ -119,6 +119,11 @@
 }
 @media (max-width: 320px ) {
   #slider .slider--general {
+    width: 180%;
+    .slick-list{
+      p{
+        width: 295px
+
 
     width: 180%;
 
