--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,6 +31,7 @@
 @import "src/styles/Team/mediaTeam";
 @import "src/styles/School/mediaSchool";
 @import "src/styles/Control/control";
+@import "src/styles/Youtube/youtube";
 
 
 
