--- a/src/styles/Sliders/mediaSliders.scss
+++ b/src/styles/Sliders/mediaSliders.scss
@@ -124,7 +124,30 @@
       p{
         width: 295px
 
+    .slick-list {
+      p {
+        width: 295px
+      }
 
+      width: 180%;
+
+      .slick-list {
+        p {
+          width: 194px
+
+        }
+
+        width: 180%;
+
+        .slick-list {
+          p {
+            width: 195px
+
+          }
+
+          img {
+            margin-left: 30%;
+          }
     width: 180%;
 
     .slick-list {
