--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -32,6 +32,7 @@
 @import "src/styles/School/mediaSchool";
 @import "src/styles/Control/control";
 @import "src/styles/Youtube/youtube";
+@import "src/styles/Information/information";
 
 
 
