--- a/src/styles/Control/control.scss
+++ b/src/styles/Control/control.scss
@@ -1,4 +1,5 @@
 #control {
+  padding-top: 201px;
   padding-top: 200px;
 
   .control--general {
@@ -7,6 +8,8 @@
         &__reactive {
           h2 {
             font-style: normal;
+            font-weight: 701;
+            font-size: 35px;
             font-weight: 700;
             font-size: 36px;
             color: #FFFFFF;
@@ -14,6 +17,7 @@
 
           p {
             font-weight: 400;
+            font-size: 17px;
             font-size: 16px;
             line-height: 24px;
             color: #FFFFFF;
@@ -31,6 +35,7 @@
 
             &__micro {
               display: flex;
+              margin-right: 391px;
               margin-right: 390px;
 
               &--prof {
@@ -70,6 +75,7 @@
                 display: flex;
                 align-items: center;
                 margin: 13px 0;
+                width: 417px;
                 width: 418px;
                 height: 80px;
                 border-radius: 10px;
@@ -102,6 +108,7 @@
         }
         &__btn {
           position: relative;
+          left: 661px;
           left: 660px;
           top: 12px;
           display: flex;
@@ -113,6 +120,7 @@
             padding: 0 20px;
             display: flex;
             align-items: center;
+            width: 201px;
             width: 202px;
             height: 44px;
             background: #FFFFFF;
