--- a/src/styles/Sliders/mediaSliders.scss
+++ b/src/styles/Sliders/mediaSliders.scss
@@ -152,20 +152,27 @@
 
     .slick-list {
       p {
-        width: 194px
+        width: 295px
 
       }
 
-      width: 180%;
+      .slick-list {
+        p {
+          width: 194px
+
+        }
+
+        width: 180%;
 
       .slick-list {
         p {
           width: 195px
 
-        }
+          }
 
-        img {
-          margin-left: 30%;
+          img {
+            margin-left: 30%;
+          }
         }
       }
     }
