--- a/src/styles/Front/front.scss
+++ b/src/styles/Front/front.scss
@@ -1,8 +1,11 @@
 #front{
   .front--general{
     &__so{
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-left: -10%;
       &--no{
-
         h1{
           padding-bottom: 33px;
           font-weight: 701;
@@ -10,16 +13,66 @@
           line-height: 46px;
           color: #FFFFFF;
         }
-        &__such{
-          left: 9.31%;
-          right: 44.1%;
-          top: 35.67%;
-          bottom: 61.27%;
-          border: 1px solid #044076;
-          border-radius: 10px;
+        &__but{
+
+
+          &--such{
+            margin: 65px 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 671px;
+            height: 69px;
+            left: 9.31%;
+            right: 44.1%;
+            top: 35.67%;
+            bottom: 61.27%;
+            border: 1px solid #044076;
+            border-radius: 10px;
+            h1{
+              width: 97px;
+              height: 23px;
+              left: 11.39%;
+              right: 81.88%;
+              top: 39.02%;
+              bottom: 60.62%;
+              font-family: 'Montserrat',sans-serif;
+              font-style: normal;
+              font-weight: 700;
+              font-size: 20px;
+              line-height: 24px;
+              text-align: right;
+              color: #FFFFFF;
+            }
+            h2{
+              width: 380px;
+              height: 19px;
+              left: 23.68%;
+              right: 70.76%;
+              top: 39.05%;
+              bottom: 60.65%;
+              font-family: 'Montserrat',sans-serif;
+              font-style: normal;
+              font-weight: 500;
+              font-size: 16px;
+              line-height: 20px;
+              color: #FFFFFF;
+            }
+          }
         }
-
-
+        &__btn{
+          width: 325px;
+          height: 70px;
+          left: 134px;
+          top: 3168px;
+          background: #044076;
+          box-shadow: -2px -2px 8px rgba(0, 0, 0, 0.2), 3px 2px 13px rgba(0, 0, 0, 0.07);
+          border-radius: 10px;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 20px;
+          color: #FFFFFF;
+        }
       }
     }
   }
