--- a/src/styles/Sliders/mediaSliders.scss
+++ b/src/styles/Sliders/mediaSliders.scss
@@ -120,61 +120,15 @@
 @media (max-width: 320px ) {
   #slider .slider--general {
     width: 180%;
-    .slick-list{
-      p{
-        width: 295px
 
     .slick-list {
       p {
-        width: 295px
+        width: 295px;
       }
 
       width: 180%;
 
-      .slick-list {
-        p {
-          width: 194px
 
-        }
-
-        width: 180%;
-
-        .slick-list {
-          p {
-            width: 195px
-
-          }
-
-          img {
-            margin-left: 30%;
-          }
-    width: 180%;
-
-    .slick-list {
-      p {
-        width: 295px
-
-      }
-
-      .slick-list {
-        p {
-          width: 194px
-
-        }
-
-        width: 180%;
-
-      .slick-list {
-        p {
-          width: 195px
-
-          }
-
-          img {
-            margin-left: 30%;
-          }
-        }
-      }
     }
   }
 }
