--- a/src/styles/Sliders/mediaSliders.scss
+++ b/src/styles/Sliders/mediaSliders.scss
@@ -124,11 +124,59 @@
     .slick-list {
       p {
         width: 295px;
+
+
+
+          .slick-list {
+            p {
+              width: 194px
+
+            }
+
+            width: 180%;
+
+            .slick-list {
+              p {
+                width: 195px
+
+              }
+
+              img {
+                margin-left: 30%;
+              }
+
+              width: 180%;
+
+              .slick-list {
+                p {
+                  width: 295px
+
+                }
+
+                .slick-list {
+                  p {
+                    width: 194px
+
+                  }
+
+                  width: 180%;
+
+                  .slick-list {
+                    p {
+                      width: 195px
+
+                    }
+
+                    img {
+                      margin-left: 30%;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
       }
-
-      width: 180%;
-
-
     }
   }
-}
+
