--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -39,6 +39,7 @@
 @import "src/styles/Control/control";
 @import "src/styles/Youtube/youtube";
 @import "src/styles/Information/information";
+@import "src/styles/Visa/visa";
 
 
 
